Tela visita e logos finalizadas

--- a/src/app/layout/app.topbar.component.html
+++ b/src/app/layout/app.topbar.component.html
@@ -1,9 +1,9 @@
 <div class="layout-topbar">
 
     <!-- TODO: Logo da empresa -->
-    <!-- <a class="layout-topbar-logo" routerLink="">
-        <img src="assets/layout/images/logo-argos.png" alt="logo">
-    </a> -->
+    <a class="layout-topbar-logo" routerLink="">
+        <img src="assets/layout/images/logo.png" alt="logo">
+    </a>
 
     <button #menubutton class="p-link layout-menu-button layout-topbar-button" (click)="layoutService.onMenuToggle()">
         <i class="pi pi-bars"></i>
