--- a/src/app/seguranca/auth/login/login.component.html
+++ b/src/app/seguranca/auth/login/login.component.html
@@ -9,7 +9,7 @@
                 padding: 0.3rem;
                 background: linear-gradient(
                     180deg,
-                    #4eb4e0 10%,
+                    #F28705 10%,
                     rgba(33, 150, 243, 0) 30%
                 );
             "
@@ -21,7 +21,7 @@
                 <div class="text-center mb-5">
                     <!-- TODO: Trocar pra logo do cara -->
                     <img
-                        src="assets/layout/images/angular_solidBlack.svg"
+                        src="assets/layout/images/logo.png"
                         alt="Image"
                         height="50"
                         class="mb-3"
@@ -57,9 +57,6 @@
                         ></button>
                     </form>
                     <br><br>
-                    <div class="text-center">
-                        <a routerLink="/auth/register">Não possui um conta? Registre-se</a>
-                    </div>
                 </div>
             </div>
         </div>
